Adding buttons and disable before select position

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,46 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/map"
     tools:context=".MapsActivity"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    tools:layout="@layout/abc_action_bar_up_container" />
+    android:orientation="horizontal"
+    android:id="@+id/map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map_element"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/map_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:weightSum="1">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/button_light_blue_selector"
+            android:textColor="@color/white"
+            android:text="Cancel"
+            android:id="@+id/cancel_location"
+            android:layout_weight="0.66" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/button_light_blue_selector"
+            android:textColor="@color/white"
+            android:text="Set Coordinate"
+            android:id="@+id/set_coordinate2"
+            android:drawableLeft="@drawable/ic_location_on_white_18dp"
+            android:layout_weight="0.34" />
+    </LinearLayout>
+
+
+</FrameLayout>
