--- a/app/src/main/res/layout/fragment_choose_pos.xml
+++ b/app/src/main/res/layout/fragment_choose_pos.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:id="@+id/choose_pos_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" Set Coordinate"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/button_light_blue_selector"
+        android:textColor="@color/white"
+        android:text="Set Coordinate"
         android:id="@+id/set_coordinate"
         android:drawableLeft="@drawable/ic_location_on_white_18dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="Zoom in"
-        android:id="@+id/zoom_in"
-        android:layout_gravity="center_horizontal" />
+    <!-- <Button
+         style="?android:attr/buttonStyleSmall"
+         android:layout_width="180dp"
+         android:layout_height="40dp"
+         android:text="Zoom in"
+         android:id="@+id/zoom_in"
+         android:layout_gravity="center_horizontal"
+         android:background="@drawable/button_light_blue_selector"
+         android:textColor="@color/white"/>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="Center map"
-        android:id="@+id/center_map"
-        android:layout_gravity="center_horizontal" />
+     <Button
+         style="?android:attr/buttonStyleSmall"
+         android:layout_width="180dp"
+         android:layout_height="40dp"
+         android:text="Center map"
+         android:id="@+id/center_map"
+         android:layout_gravity="center_horizontal"
+         android:background="@drawable/button_light_blue_selector"
+         android:textColor="@color/white"/>
+         -->
 </LinearLayout>
